--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -37,6 +37,7 @@ else()
     add_subdirectory(retrieval)
     add_subdirectory(save-load-state)
     add_subdirectory(simple)
+    add_subdirectory(simple-batch)
     add_subdirectory(passkey)
     add_subdirectory(speculative)
     add_subdirectory(lookahead)
